--- a/readme.me
+++ b/readme.me
@@ -1,4 +1,4 @@
 **A Fazer:**          
 Melhorar Design Vídeo;   
 Responsividade Total;
-Incrementar Carrossel Projetos.
+Adicionar BTNS Carrossel Projetos.
