--- a/readme.me
+++ b/readme.me
@@ -2,3 +2,8 @@
 Melhorar Design Vídeo;   
 Responsividade Total;
 Adicionar BTNS Carrossel Projetos.
+
+responsividade sem scroll lateral até w:484;
+
+o problema é o carrossel:
+    sem o carrossel a resp sem scroll lateral até w:401px;
